# OpenBase

./: ADAPTERS.md  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONTRIBUTING.md  GOVERNANCE.md  OPENBASE_V2_RELEASE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  REVIEW_REPORT.md  ROADMAP.md  SECURITY.md  _create_core_dirs.py  _fix_claw_agent.py  _fix_claw_tools.py  _fix_cli_test.py  _fix_evidence.py  _fix_identity.py  _fix_identity_schema.py  _fix_replay.py  _fix_test_import.py  _fix_test_write.py  _fix_trust_test.py  _rename_and_fix.py  _write_cert_init.py  _write_certificate_test.py  _write_certify.py  _write_certify_tests.py  _write_claw_init.py  _write_claw_tests.py  _write_claw_tools.py  _write_cli.py  _write_event_models.py  _write_event_serializer.py  _write_event_validator.py  _write_evidence.py  _write_evidence_signer.py  _write_governance.py  (+26 more)
adapters/: __init__.py  base_emitter.py
config/: keys.json
conformance/: README.md  certify.py
core/: verify.py
demo-agent/: README.md  openbase.yaml
demos/: demo1_coding_audit.py  demo2_financial_trace.py  demo3_multi_agent.py  demo_flight_recorder.py  demo_video_script.md
docs/: quickstart.md
traccia/: LICENSE  README.md  pyproject.toml
traccia/cmd/: main.py  registry.py  report.py  test.py  trust.py
traccia/cmd/commands/: __init__.py
traccia/commands/: certificate.py  init.py  main.py.bak  proof_verify.py  prove.py  replay.py  run.py  verify.py
traccia/pkg/: plugins
traccia/pkg/python/: adversarial_replay.py  agent.py  byzantine_detector.py  clock.py  consensus.py  counterfactual.py  events.py  fault_injector.py  graph.py  heuristic_engine.py  identity.py  inconsistency_proof.py  merkle.py  policy.py  proof_generator.py  replay_v1.py  setup.py  simulator.py  trust.py  vector_clock.py  verifier.py
traccia/pkg/python/openbase_sdk/: client.py
traccia/tests/: test_sdk.py
traccia/traccia/: __init__.py  cli.py  report.py  sdk.py
traccia/traccia/openbase_adapter/: __init__.py
traccia/traccia/package/: __init__.py  exporter.py
traccia/traccia/renderer/: __init__.py  timeline.py
traccia/traccia/session/: __init__.py  manager.py
(+455 files in other folders)
