[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbase"
version = "0.2.0"
description = "OpenBase Agent Runtime + Evidence + Certificate System"
readme = "README.md"
requires-python = ">=3.9"

authors = [{ name = "OpenBase Team" }]

dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
openbase = "openbase.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
