[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "traccia"
version = "2.0.0"
description = "Traccia SDK - One-line OpenBase integration for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "OpenBase Contributors"}]
keywords = ["ai", "agent", "trust", "openbase", "observability", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41.0",
    "jsonschema>=4.20",
]

[project.scripts]
traccia = "traccia.cli:main"

[project.urls]
Homepage = "https://github.com/openbase/openbase"
Documentation = "https://github.com/openbase/openbase"
Repository = "https://github.com/openbase/openbase"
Issues = "https://github.com/openbase/openbase/issues"
