[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "traccia"
version = "2.0.0"
description = "Official Developer SDK for OpenBase — Add verifiable execution proof to any AI agent in 5 lines."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0",
    "jsonschema>=4.20",
]

[project.scripts]
traccia = "traccia.cli:main"
